--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <p class="lead">NOR Tattoo Studio je fokusiran na kvalitet, sterilnost i dizajn koji priča tvoju priču. Svaka tetovaža radi se uz prethodnu konsultaciju i skicu.</p>
         <p>Koristimo jednokratne igle, radimo u kontrolisanim uslovima i dajemo detaljna uputstva za negu. Radimo po zakazivanju, a manje walk‑in motive moguće je uraditi isti dan ako je termin slobodan.</p>
       </div>
-      <img src="https://images.unsplash.com/photo-1548207800-8d3f4f9c8e3f?q=80&w=1400&auto=format&fit=crop" alt="Tattoo studio radni sto i mašina">
+        <img src="studio.jpeg" alt="Tattoo studio radni sto i mašina">
     </div>
   </section>
 
